Skip to content

Regression: cursor visible after one pixel movement

  • Put the mouse on the video rendering area.
  • Wait for cursor hide timeout.
  • Move the cursor by only one pixel (this is not easy).
  • Wait for the cursor hide timeout.

-> the cursor is not hidden.

See also http://forum.videolan.org/viewtopic.php?f=13&t=79093

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information