Always re-arm the cursor hide timeout on movement (fixes: #3915)

At least with X11, the mouse may move without changing coordinates.
We need to re-arm the cursor hide timeout since the cursor was shown.